<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlTaskLayout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/enter_task_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/btnLocation"
        android:onClick="onSelectLocation"
        android:layout_below="@+id/etTaskDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set"
        android:layout_below="@+id/tvDateTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spType"
        android:layout_below="@+id/btnEndTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:id="@+id/btnCreateTask"
        android:layout_below="@id/spType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onTaskAdded"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_location_for_task"
        android:id="@+id/tvLocation"
        android:layout_alignBottom="@+id/btnLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_continues_until_deleted"
        android:id="@+id/tvStartDate"
        android:layout_alignBottom="@id/btnStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/leave_blank_to_start_immediately" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeating"
        android:id="@+id/cbRepeating"
        android:checked="false"
        android:layout_below="@+id/btnStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/tvDateTitle"
        android:layout_below="@+id/tvLocation"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/tvTimeTitle"
        android:layout_below="@+id/cbRepeating"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_continues_until_deleted"
        android:id="@+id/tvEndTime"
        android:text="@string/leave_blank_for_all_day"
        android:layout_alignBottom="@+id/btnEndTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:layout_below="@+id/btnStartTime"
        android:layout_alignRight="@+id/spType" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_all_day"
        android:text="@string/leave_blank_for_all_day"
        android:layout_alignBottom="@+id/btnStartTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_below="@+id/tvTimeTitle"
        android:layout_alignRight="@+id/spType"
        android:layout_alignEnd="@+id/spType" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_recurrence_set"
        android:id="@+id/tvRecurrence"
        android:layout_below="@+id/btnStartDate"
        android:layout_alignRight="@+id/btnStartDate"
        android:layout_alignEnd="@+id/btnStartDate" />

    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/enter_task_description_optional"
        android:layout_below="@+id/etTaskName"
        android:layout_centerHorizontal="true" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.03"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/mapwhere" />




</RelativeLayout>