<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llTaskLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llTaskName"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_name"/>

            <EditText
                android:id="@+id/etTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/enter_task_name"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llTaskDescription"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_description"/>

            <EditText
                android:id="@+id/etTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/enter_task_description_optional"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llTaskLocation"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_location"/>

            <Button
                android:id="@+id/btnLocation"
                style="@style/NoGradientBlueButton"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectLocation"
                android:text="@string/location_set"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/set_location_for_task"
                android:id="@+id/tvLocation"
                android:textColor="@color/hint_grey"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/llTaskTime"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Time"
                    android:id="@+id/tvSetTime"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"/>

                <Switch
                    android:id="@+id/swToggleTime"
                    android:layout_width="50dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/llTaskTimeDetail"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginStart="35dp">

                        <Button
                            style="@style/ClearButton"
                            android:id="@+id/btnStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Start Date" />

                        <Button
                            style="@style/ClearButton"
                            android:id="@+id/btnEndDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="End Date" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/llTaskSelectTime"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp">

                        <Button
                            style="@style/ClearButton"
                            android:id="@+id/btnStartTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Start Time"/>

                        <Button
                            android:id="@+id/btnEndTime"
                            style="@style/ClearButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="End Time"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeating"
                        android:id="@+id/cbRepeating"
                        android:checked="false"
                        android:textColor="@color/hint_grey"
                        android:theme="@style/BlueCheckbox"/>

                    <CheckBox
                        android:layout_marginLeft="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_day"
                        android:id="@+id/cbAllDay"
                        android:checked="false"
                        android:textColor="@color/hint_grey"
                        android:theme="@style/BlueCheckbox"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCancelTask"
        android:layout_marginTop="10dp"
        android:onClick="onCancelTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btnCreateTask"
        android:onClick="onTaskAdded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:layout_above="@id/btnCancelTask"/>


</RelativeLayout>